Fixing overlapping cards issue

--- a/assets/scss/_shortcodes.scss
+++ b/assets/scss/_shortcodes.scss
@@ -9,7 +9,6 @@
     h5 {
         font-weight: bold;
         min-width: fit-content;
-        white-space: nowrap;
     }
 
     p {
